# token-compressor

./: BENCHMARK.md  CHANGELOG.md  COMPRESSION_RESULT_SCHEMA.md  LICENSE  README.md  UPDATE_2026-03-08.md  cli.py  compressor.py  mcp_server.py  pyproject.toml  requirements.txt  server.json
tests/: test_compressor.py
token_compressor_mcp/: server.py
